# metaled

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  options.cmake
assets/astroboy/: astro_boy_animation.hpp  astro_boy_geometry.hpp  astro_boy_skeleton.hpp
assets/shaders/: shaders.metal
src/: camera.cpp  camera.hpp  camera.inl  main.mm  metal_astro_boy.hpp  skeletal_animation.hpp
